Adds a csrf token to the forms
This will allow it tto pass the myFT csrf checks

 🐿 v2.11.0

--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "o-labels": "^3.0.0",
     "n-ui-foundations": "^3.0.0",
+    "n-myft-ui": "^18.1.5",
     "o-icons": ">=4.0.0 <6",
     "superstore-sync": "^2.1.1"
   }
